# clusterapp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scripts_local_docker_test.sh
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 20260505_01_init.py
app/: config.py  main.py  models.py  schemas.py
app/api/: routes.py
app/k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  secret.example.yaml  service.yaml
app/services/: content_processing.py  embeddings.py  ingestion.py  recommendations.py
app/static/: style.css
app/templates/: article.html  index.html
helm/lecpac-rss/: Chart.yaml  values.yaml
helm/lecpac-rss/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
tests/: test_api.py  test_config.py  test_content_processing.py  test_ingestion.py  test_recommendations.py
tests/perf/: README.md  k6_lecpac_workflow.js
